# spenso

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates.nix  flake.nix  oneloop.out  result
.cargo/: config.toml
.github/workflows/: _run_check.yml  ci.yml  clippy.yml  coverage.yml  docs.yml  release-plz.yml  rust.yml  tests.yml
.zed/: settings.json  tasks.json
benches/: 3LphotonEval.rs  3LphotonsPhysical.rs  evaluate_net.rs  gamma_net.rs
bitvec_test/: Cargo.toml
examples/: 3LphotonsPhysical.rs  const.json  data.json  evaluate_network.rs  gamma_chain.rs  gamma_network.rs  lbl.rs  pres.rs
idenso/: CHANGELOG.md  Cargo.toml
idenso/src/: color.rs  gamma.rs  lib.rs  metric.rs  parsing_ind.rs  python.rs  rep_symbols.rs  representations.rs
idenso/tests/: network_informed.rs
pres/: pres.html  pres.qmd
spensalg/pres/: pres.qmd
spenso/: CHANGELOG.md  Cargo.toml
spenso-hep-lib/: CHANGELOG.md  Cargo.toml
spenso-hep-lib/src/: lib.rs
spenso-hep-lib/tests/: gamma_algebra_validate.rs
spenso-hep-lib/tests/common/: mod.rs
spenso-macros/: CHANGELOG.md  Cargo.toml
spenso-macros/src/: lib.rs
spenso-macros/tests/: derive_rep.rs
spenso/benches/: 3LphotonEval.rs  evaluate_net.rs
spenso/examples/: gamma_chain.rs  gamma_network.rs  lbl.rs
spenso/src/: algebra.rs  algebraic_traits.rs  arithmetic.rs  complex.rs  contraction.rs  data.rs  iterators.rs  lib.rs  network.rs  num_tensor.rs  parametric.rs  polynomial.rs  shadowing.rs  spenso.rs  structure.rs  symbolic.rs  symbolica_utils.rs  tensor_library.rs  tests.rs  ufo.rs  upgrading_arithmetic.rs  utils.rs
spenso/src/algebra/: add_assign.rs  algebraic_traits.rs  complex.rs  fallible_add.rs  fallible_sub.rs  neg.rs  scalar_mul.rs  upgrading_arithmetic.rs
spenso/src/algebra/complex/: add.rs  div.rs  mul.rs  sub.rs  symbolica_traits.rs
spenso/src/arithmetic/: add_assign.rs  fallible_add.rs  fallible_sub.rs  neg.rs  ref_zero.rs  scalar_mul.rs  sub_assign.rs
spenso/src/complex/: add_assign.rs  div.rs  mul_assign.rs  symbolica_traits.rs
spenso/src/contraction/: exteriorproduct.rs  multicontract.rs  singlecontract.rs  trace.rs
spenso/src/iterators/: core_iterators.rs  fiber.rs  fiber_iterators.rs  indices.rs  tensor_iterators.rs  traits.rs
spenso/src/iterators/tests/: core_iterator_tests.rs  fiber_tests.rs  mod.rs  tensor_iterator_tests.rs
spenso/src/network/: .parsing.rs.pending-snap  contract.rs  graph.rs  library.rs  parsing.rs  set.rs  shadowing_tests.rs  store.rs  symbolica_interop.rs  tensor_library.rs  tests.rs
spenso/src/parametric/: add_assign.rs  atomcore.rs  mul_assign.rs  scalar_mul.rs  to_param.rs
spenso/src/shadowing/: symbolica_utils.rs
spenso/src/snapshots/: spenso__tests__fibers.snap  spenso__tests__multi_contract.snap  spenso__tests__scalar_and_dim1_conract-2.snap  spenso__tests__scalar_and_dim1_conract-3.snap  spenso__tests__scalar_and_dim1_conract.snap  spenso__tests__single_contract.snap
spenso/src/structure/: abstract_index.rs  concrete_index.rs  dimension.rs  indexless.rs  named.rs  ordered.rs  permuted.rs  representation.rs  slot.rs  smart_shadow.rs  vec.rs
spenso/src/tensors/: complex.rs  data.rs  parametric.rs  symbolic.rs
spenso/src/tensors/data/: dense.rs  sparse.rs
spenso/src/tensors/parametric/: add_assign.rs  atomcore.rs  div.rs  mul_assign.rs  scalar_mul.rs  to_param.rs
spenso/tests/: three_loop.rs
spenso/tests/common/: mod.rs
spynso3/: CHANGELOG.md  Cargo.toml  PYTHON_API.md  cargo.toml
spynso3/src/: lib.rs  library.rs  library_tensor.rs  network.rs  structure.rs
src/: arithmetic.rs  complex.rs  contraction.rs  data.rs  iterators.rs  lib.rs  network.rs  parametric.rs  permutation.rs  polynomial.rs  scalar.rs  shadowing.rs  spenso.rs  structure.rs  symbolic.rs  symbolica_utils.rs  tensor_library.rs  tests.rs  ufo.rs  upgrading_arithmetic.rs
src/iterators/: mod.rs
src/network/: shadowing_tests.rs
src/parametric/: atomcore.rs
src/snapshots/: spencer__tests__multi_contract.snap  spenso__iterators__test.snap  spenso__iterators__test.snap.new  spenso__shadowing__test__pslash.snap  spenso__tests__dense_dense_single_contract.snap  spenso__tests__fibers.snap  spenso__tests__multi_contract.snap  spenso__tests__scalar_and_dim1_conract-2.snap  spenso__tests__scalar_and_dim1_conract-3.snap  spenso__tests__scalar_and_dim1_conract-4.snap  spenso__tests__single_contract-2.snap  spenso__tests__single_contract.snap  spenso__tests__single_fiber.snap  spenso__tests__sparse_diag_dense_contract.snap
src/structure/: abstract_index.rs  concrete_index.rs  dimension.rs  representation.rs  slot.rs
tests/: 3LPhotonsPhysical.rs
weyl/: Cargo.toml
weyl/src/: lib.rs
