[workspace]
members = ["spenso", "spenso-macros", "spenso-hep-lib", "idenso", "spynso3"]
resolver = "2"                                                               # Add this line

[workspace.package]
authors = ["Lucien Huber <cargo+mail@lucien.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphal00p/spenso"
edition = "2021"

[profile.bench]
lto = "fat"


[patch.crates-io]
# symbolica = { git = "https://github.com/benruijl/symbolica", rev = "57f25f34928ca667bd5889d94ed616d15e2ad94f" }
spenso = { path = "./spenso" }
idenso = { path = "./idenso" }
spenso-macros = { path = "./spenso-macros" }
spenso-hep-lib = {path="./spenso-hep-lib"}
# linnet = { path = "../linnet" }
# linnet = { git = "https://github.com/alphal00p/linnet", rev = "6a13c34b2e58021aebec7ed0c78bc70c50c72283" }
# symbolica = { path = "../symbolica" }
# symbolica = { git = "https://github.com/benruijl/symbolica", branch = "complex_coeff" }
