[workspace]
resolver = "2"  # Add this line
members = ["idenso", "spenso", "spenso-hep-lib", "spenso-macros", "spynso3"]

[workspace.package]
authors = ["Lucien Huber <cargo+mail@lucien.ch>"]
edition = "2024"
repository = "https://github.com/alphal00p/spenso"
license = "MIT OR Apache-2.0"

[patch.crates-io]
graphica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
numerica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
symbolica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }

idenso = { path = "./idenso" }
spenso = { path = "./spenso" }
spenso-hep-lib = { path = "./spenso-hep-lib" }
spenso-macros = { path = "./spenso-macros" }
# linnet = { path = "../linnet" }
# linnet = { git = "https://github.com/alphal00p/linnet", rev = "c48d2f85b75c6d3323dd337a32166b68232c2f08" }
# symbolica = { path = "../symbolica" }
