[package]
name = "idenso"
version = "0.2.0"
edition = "2024"
description = "Tensor identities for symbolica"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

anyhow = { version = "1.0.86", features = ["backtrace"] }
bincode = { version = "2.0", optional = true }
bincode-trait-derive = { version = "0.1.0", optional = true }
symbolica = { version = "0.17.0" }
spenso = { version = "0.5.0", features = ["shadowing"] }
spenso-macros = "0.2.0"
itertools = "0.14.0"
linnet = "0.8.0"
[features]

default = []
bincode = ["dep:bincode", "dep:bincode-trait-derive"]
