[package]
name = "idenso"
version = "0.2.4"
edition = "2024"
description = "Tensor identities for symbolica"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

anyhow = { version = "1.0.86", features = ["backtrace"] }
bincode = { version = "2.0", optional = true }
bincode-trait-derive = { version = "0.1.0", optional = true }
symbolica = { version = "1.2", default-features = false }
spenso = { version = "0.5", features = ["shadowing"] }
spenso-macros = "0.3"
itertools = "0.14"
linnet = "0.16"

thiserror = "2"
pyo3 = { version = "0.27", features = ["anyhow"], optional = true }
pyo3-stub-gen = { version = "0.17", default-features = false, optional = true }

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml", "json", "ron", "toml"] }

[features]

default = []
bincode = ["dep:bincode", "dep:bincode-trait-derive"]
python = ["dep:pyo3"]
python_stubgen = ["symbolica/python_stubgen", "python", "dep:pyo3-stub-gen"]
