[package]
name = "spenso-hep-lib"
version = "0.1.1"
edition = "2024"
description = "A spenso tensor library for high energy physics"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

spenso = { version = "0.5.0", features = ["shadowing"] }
symbolica = { version = "0.17.0" }
spenso-macros = { version = "0.2.0" }
idenso = "0.2.0"


ahash = { version = "0.8.11", features = ["serde"] }
xpct = "0.5.1"
