[package]
name = "spenso-hep-lib"
version = "0.1.4"
edition = "2024"
description = "A spenso tensor library for high energy physics"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

spenso = { version = "0.5", features = ["shadowing"] }
symbolica = { version = "0.20", default-features = false }
spenso-macros = { version = "0.2" }
idenso = "0.2"


ahash = { version = "0.8.11", features = ["serde"] }
xpct = "0.5.1"

[dev-dependencies]

insta = { version = "1.38.0", features = ["yaml", "json", "ron", "toml"] }
