[package]
name = "spenso-macros"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for the spenso tensor library"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
symbolica = { version = "1", optional = true, default-features = false }
serde = "1.0.201"

[features]
shadowing = ["dep:symbolica"]
[dev-dependencies]
spenso = { path = "../spenso" }
linnet = "0.13.3"
