[package]
name = "spynso3"
version = "0.1.1"
edition = "2024"
description = "Pyo3 bindings for spenso"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

spenso = { version = "0.5", features = ["shadowing", "python"] }
symbolica = { version = "1.1", default-features = false, features = [
    "python_export",
] }
spenso-macros = { version = "0.3" }
spenso-hep-lib = { version = "0.1.4" }
idenso = "0.2"
ahash = { version = "0.8.11", features = ["serde"] }
xpct = "0.5.1"

anyhow = { version = "1.0.86", features = ["backtrace"] }
pyo3 = { version = "0.27", features = ["anyhow"] }

pyo3-stub-gen-derive = { git = "https://github.com/benruijl/pyo3-stub-gen", branch = "patched", package = "pyo3-stub-gen-derive", default-features = false }

pyo3-stub-gen = { version = "0.17", default-features = false, optional = true }
itertools = "0.14.0"
thiserror = "2.0.16"

[features]

python_stubgen = [
    "symbolica/python_stubgen",
    "dep:pyo3-stub-gen",
    "spenso/python_stubgen",
]


# [patch.crates-io]
# pyo3-stub-gen = { git = "https://github.com/benruijl/pyo3-stub-gen", branch = "patched" }
