[package]
name = "weyl"
version = "0.0.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

spenso = { path = "../spenso", features = ["shadowing"] }
symbolica = { version = "0.17.0" }
spenso-macros = { path = "../spenso-macros" }
idenso = { path = "../idenso" }
